--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,11 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
+        <service
+        android:name="sharma.yateesh.cloudinary_app.S3.transferutility.TransferService"
+        android:enabled="true" />
+
         <meta-data android:name="CLOUDINARY_URL" android:value="cloudinary://675358991995299:nsjPjOjECT8bUyQYaGaFm54UhKw@ddlo5lzpt"/>
         <activity android:name=".MainActivity">
             <intent-filter>
